fix button positions

--- a/index.html
+++ b/index.html
@@ -325,28 +325,14 @@
           </div>
         </div>
       </div>
-      <div id="villageButtonRow" class="row">
+      <div id="attackEscapeButtons" class="row">
         <button class="attack" id="attackVillage" type="button" name="button">attack!</button>
-      </div>
-      <div id="hauntedButtonRow" class="row">
         <button class="attack" id="attackHaunted" type="button" name="button">attack!</button>
-      </div>
-      <div id="swampButtonRow" class="row">
         <button class="attack" id="attackSwamp" type="button" name="button">attack!</button>
-      </div>
-      <div id="trailerButtonRow" class="row">
         <button class="attack" id="attackTrailer" type="button" name="button">attack!</button>
-      </div>
-      <div id="boatButtonRow" class="row">
         <button class="attack" id="attackBoat" type="button" name="button">attack!</button>
-      </div>
-      <div id="towerButtonRow" class="row">
         <button class="attack" id="attackTower" type="button" name="button">attack!</button>
-      </div>
-      <div id="castleButtonRow" class="row">
         <button class="attack" id="attackCastle" type="button" name="button">attack!</button>
-      </div>
-      <div id="throneButtonRow" class="row">
         <button class="attack" id="attackThrone" type="button" name="button">attack!</button>
         <button class="escape" type="button" name="button">escape</button>
       </div>
