add health bars to the userPlayer and enemy

--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
       <div class="container locationHide" id="villageContainer">
         <div class="row">
           <div class="col-md-9" id="villageLocation">
+            <div class="healthBarUser">
+
+            </di
+            <div class="healthBarEnemy">
+
+            </div>>
             <div class="row">
               <div id="villagePlayerAppear" class="col-xs-2">
                 <img class="Tinks villageHero" src="images/druid_burned.png" alt="" />
@@ -186,6 +192,12 @@
         </div>
       </div>
       <div class="container locationHide" id="hauntedContainer">
+        <div class="healthBarUser">
+
+        </div>
+        <div class="healthBarEnemy">
+
+        </div>
         <div class="row">
           <div class="col-md-9" id="hauntedLocation">
             <div class="row">
@@ -206,6 +218,12 @@
         </div>
       </div>
       <div class="container locationHide" id="towerContainer">
+        <div class="healthBarUser">
+
+        </div>
+        <div class="healthBarEnemy">
+
+        </div>
         <div class="row">
           <div class="col-md-9" id="towerLocation">
             <div class="row">
@@ -226,6 +244,12 @@
         </div>
       </div>
       <div class="container locationHide" id="trailerContainer">
+        <div class="healthBarUser">
+
+        </div>
+        <div class="healthBarEnemy">
+
+        </div>
         <div class="row">
           <div class="col-md-9" id="trailerLocation">
             <img id="locationUfo" src="images/ufo2.png" alt="" />
@@ -268,6 +292,12 @@
         </div>
       </div>
       <div class="container locationHide" id="castleContainer">
+        <div class="healthBarUser">
+
+        </div>
+        <div class="healthBarEnemy">
+
+        </div>
         <div class="row">
           <div class="col-md-9" id="castleLocation">
             <div class="row">
@@ -288,6 +318,12 @@
         </div>
       </div>
       <div class="container locationHide" id="swampContainer">
+        <div class="healthBarUser">
+
+        </div>
+        <div class="healthBarEnemy">
+
+        </div>
         <div class="row">
           <div class="col-md-12" id="swampLocation">
             <div class="row">
@@ -309,6 +345,12 @@
         </div>
       </div>
       <div class="container locationHide" id="throneContainer">
+        <div class="healthBarUser">
+
+        </div>
+        <div class="healthBarEnemy">
+
+        </div>
         <div class="row">
           <div class="col-md-12" id="throneLocation">
             <div class="row">
