add media query for front page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <img id="sword" src="images/sword.png" alt="">
         <h1 id="title">The Legend of</h1>
         <h1 id="title">Taxidermia</h1>
-        <img src="images/leaf-banner.png" alt="">
+        <img id="leafBanner" src="images/leaf-banner.png" alt="">
+      </br>
         <button id="gameStart" type="button" name="button">Start</button>
       </div>
     </div>
@@ -330,13 +331,11 @@
         <button class="attack" id="attackHaunted" type="button" name="button">attack!</button>
         <button class="attack" id="attackSwamp" type="button" name="button">attack!</button>
         <button class="attack" id="attackTrailer" type="button" name="button">attack!</button>
-        <button class="attack" id="attackBoat" type="button" name="button">attack!</button>
         <button class="attack" id="attackTower" type="button" name="button">attack!</button>
         <button class="attack" id="attackCastle" type="button" name="button">attack!</button>
         <button class="attack" id="attackThrone" type="button" name="button">attack!</button>
         <button class="escape" type="button" name="button">escape</button>
       </div>
-
       <div class="row">
         <button id="throneRoom" type="button" name="button">Throne Room</button>
       </div>
