fix health bars

--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
           <div class="col-md-9" id="villageLocation">
             <div class="healthBarUser">
 
-            </di
-            <div class="healthBarEnemy">
+            </div>
+            <div class="healthBarEnemy" id="villageBar">
 
-            </div>>
+            </div>
             <div class="row">
               <div id="villagePlayerAppear" class="col-xs-2">
                 <img class="Tinks villageHero" src="images/druid_burned.png" alt="" />
@@ -195,7 +195,7 @@
         <div class="healthBarUser">
 
         </div>
-        <div class="healthBarEnemy">
+        <div class="healthBarEnemy" id="hauntedBar">
 
         </div>
         <div class="row">
@@ -221,7 +221,7 @@
         <div class="healthBarUser">
 
         </div>
-        <div class="healthBarEnemy">
+        <div class="healthBarEnemy" id="towerBar">
 
         </div>
         <div class="row">
@@ -247,7 +247,7 @@
         <div class="healthBarUser">
 
         </div>
-        <div class="healthBarEnemy">
+        <div class="healthBarEnemy" id="trailerBar">
 
         </div>
         <div class="row">
@@ -295,7 +295,7 @@
         <div class="healthBarUser">
 
         </div>
-        <div class="healthBarEnemy">
+        <div class="healthBarEnemy" id="castleBar">
 
         </div>
         <div class="row">
@@ -321,7 +321,7 @@
         <div class="healthBarUser">
 
         </div>
-        <div class="healthBarEnemy">
+        <div class="healthBarEnemy" id="swampBar">
 
         </div>
         <div class="row">
@@ -348,7 +348,7 @@
         <div class="healthBarUser">
 
         </div>
-        <div class="healthBarEnemy">
+        <div class="healthBarEnemy" id="throneBarEnemy">
 
         </div>
         <div class="row">
