add winner screen and style it

--- a/index.html
+++ b/index.html
@@ -340,5 +340,9 @@
         <button id="throneRoom" type="button" name="button">Throne Room</button>
       </div>
     </div>
+    <div class="container" id="winContainer">
+      <img id="prince" src="images/prince_burned.png" alt="" />
+      <p>Congratulations, you defeated Vlad, the sexy squirell, and all of his evil minions. you have restored peace to our lands and freed the people of Taxidermia from Vlad's reign of terror </p>
+    </div>
   </body>
 </html>
